--- a/templates/introduceGroupBehaviorPredictionModel.html
+++ b/templates/introduceGroupBehaviorPredictionModel.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SI模型介绍</title>
+  <title>DMGPL模型介绍</title>
   <link rel="stylesheet" href="/static/layui/css/layui.css" media="all">
 </head>
 <body>
@@ -13,10 +13,10 @@
                 <div class="layui-collapse" lay-accordion style="background-color: #f8f8f8">
                     <div class="layui-colla-item" style="color: #000000;">
                         <div class="layui-colla-title" style="background-color: #f8f8f8;font-size:25px; font-weight: bold; color: #000000;">
-                            SI模型介绍
+                            DMGPL模型介绍
                         </div>
                         <div class="layui-colla-content layui-show" style="background-color:#f8f8f8; overflow:auto; width:97%; height:180px; font-size:18px; color: #000000; line-height:25pt; text-align: justify; text-indent: 2em;">
-                            传染病模型研究传染病的传播速度、空间范围、传播途径、动力学机理等问题。由于谣言传播和传染病传播之间的相似性，近年来传染病模型被广泛应用在舆论、谣言等信息传播领域中，以指导对谣言传播的有效地预防和控制。常见的传染病模型分为 SI、SIR模型等。SI 模型考虑了传染病爆发和传播的过程，将人群分为两类—— S 类和 I 类，其中S类为易感者 (Susceptible)，指未得病者，但缺乏免疫能力，与感染者接触后容易受到感染；I 类为感染者 (Infectious)，指染上传染病的人，可以传播给易感者，将其变为感染者。在谣言传播中，S类指的尚未接收到谣言信息的无知者人群，而I类指那些接受并传播谣言的传播者人群。该模型的主要参数为感染率，即传播者将谣言传播给它的邻居节点并使其感染的概率，感染率的取值范围为[0,1]。图1为SI模型在wiki百科网络上模拟传播的结果，其中总人数为104，初始时刻网络中只有一个感染节点，感染率设置为0.3。红色曲线展示了网络中感染节点的数量变化，黑色曲线展示了易感节点的数量变化。图2为SI模型传播动态截图，灰色节点代表易感节点，红色节点代表感染节点。
+                            下图展示了DMGPL模型的总体架构，该模型总共包含三个模块。（1）区域感知的用户动态偏好提取模块：该模块可进一步分为用户动态行为特征提取和用区域结构特征提取两个子模块，前者利用长短期记忆网络（Long Short-Term Memory，LSTM）来从用户的历史行为序列信息中提取用户动态行为特征，后者利用图神经网络（Graph Neural Network，GNN）来从用户社交网络信息中提取用户区域结构特征，然后将两种特征融合得到邻居感知的用户动态表示。（2）多视图群体偏好聚合模块：模型的核心部分，该模块通过MGA来对群体行为进行建模，MGA先用多种策略聚合用户表示来获取多视图群体聚合表示，然后基于群体伸缩度来对群体聚合表示进行放缩，最后利用多层感知器（MultiLayer Perceptron，MLP）来学习最终的群体表示。（3）预测模块：将群体、事件的向量表示作为输入，利用NCF模型来学习二者的隐藏交互向量，最终输出得到目标群体参与相应事件的概率。
                         </div>
                     </div>
                 </div>
@@ -24,8 +24,8 @@
             <div class="layui-card" style="background-color: #f8f8f8">
                 <div class="layui-carousel" id="lunbotu" style="margin:0 auto; " lay-anim="" lay-indicator="inside" lay-arrow="hover">
                     <div carousel-item align="center">
-                        <div class="layui-this"><img src="../static/image/SI.png"  style="width: 80%;height:100%"></div>
-                        <div class=""><img src="../static/image/SI_process.png" style="width: 80%;height:100%"></div>
+                        <div class="layui-this"><img src="../static/image/DMGPL.png"  style="width: 80%;height:100%"></div>
+{#                        <div class=""><img src="../static/image/SI_process.png" style="width: 80%;height:100%"></div>#}
                     </div>
                 </div>
             </div>
