--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
 
   <div class="layui-body" style=" overflow: hidden;">
     <!-- 内容主体区域 -->
-    <div id="init_title" style="position:absolute;left:5%;top:10%;">内容主体区域。记得修改 layui.css 和 js 的路径</div>
+    <div id="init_title" style="position:absolute;left:10%;top:45%;font-size: 70px;">社交网络群体分析可视化平台</div>
     <iframe id="iframe_id" src="" style=" width: 100%; height:100%;"></iframe>
   </div>
 
