--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -50,13 +50,13 @@
                             &nbsp;<br>
                             <h2><b>团队介绍：</b></h2>
                             <p>老师：李卫民教授等。<br></p>
-                            <p>研究生：邓志斌、刘艳霞、危丁梅、李嘉冕、刘芳宇、王婕等。<br></p>
+                            <p>研究生：张财、邓志斌、李亚琼、郭易兴、刘芳宇、王婕、朱嘉洁等。<br></p>
                             &nbsp;<br>
                             <HR>
                             &nbsp;<br>
                             <h2><b>联系我们：</b></h2>
                             <p>欢迎注册使用，如果您有什么建议和意见，请联系：<br></p>
-                            <p>联系邮箱：zhibindeng@shu.edu.cn<br></p>
+                            <p>联系邮箱：fangyuliu@shu.edu.cn<br></p>
                         </div>
                     </div>
                 </div>
