更新项目划分

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,14 @@
       <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
       <ul class="layui-nav layui-nav-tree" lay-filter="test">
         <li class="layui-nav-item">
+          <a href="javascript:;" style="font-size: 18px;">微博可视化模块</a>
+          <dl class="layui-nav-child">
+            <dd><a onclick="skipto('introduceWeiboVisualizationModule')">模型介绍</a></dd>
+            <dd><a onclick="skipto('DemonstrationOfWeiboVisualizationModule')">模型展示</a></dd>
+            <dd><a href="javascript:;">子模块视需要添加</a></dd>
+          </dl>
+        </li>
+        <li class="layui-nav-item">
           <a class="" href="javascript:;" style="font-size: 18px;">群体行为预测</a>
           <dl class="layui-nav-child">
             <dd><a onclick="skipto('introduceGroupBehaviorPredictionModel')">模型介绍</a></dd>
@@ -80,22 +88,6 @@
           <dl class="layui-nav-child">
             <dd><a onclick="skipto('introduceGroupSentimentAnalysisModel')">模型介绍</a></dd>
             <dd><a onclick="skipto('DemonstrationOfGroupSentimentAnalysisModel')">模型展示</a></dd>
-            <dd><a href="javascript:;">子模块视需要添加</a></dd>
-          </dl>
-        </li>
-        <li class="layui-nav-item">
-          <a href="javascript:;" style="font-size: 18px;">影响力最大化</a>
-          <dl class="layui-nav-child">
-            <dd><a onclick="skipto('introduceMaximumInfluenceModel')">模型介绍</a></dd>
-            <dd><a onclick="skipto('DemonstrationOfMaximumInfluenceModel')">模型展示</a></dd>
-            <dd><a href="javascript:;">子模块视需要添加</a></dd>
-          </dl>
-        </li>
-        <li class="layui-nav-item">
-          <a href="javascript:;" style="font-size: 18px;">社区划分模块</a>
-          <dl class="layui-nav-child">
-            <dd><a onclick="skipto('introduceCommunityDivisionModel')">模型介绍</a></dd>
-            <dd><a onclick="skipto('DemonstrationOfCommunityDivisionModel')">模型展示</a></dd>
             <dd><a href="javascript:;">子模块视需要添加</a></dd>
           </dl>
         </li>
