--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>社交网络群体分析平台</title>
+  <title>群体行为动态演化平台</title>
   <script src="../static/js/jquery.js"></script>
   <link rel="stylesheet" href="../static/layui/css/layui.css"/>
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
   <div class="layui-header">
-    <div class="layui-logo" style="font-size: 20px;line-height: 60px;">社交网络群体分析平台</div>
+    <div class="layui-logo" style="font-size: 20px;line-height: 60px;">群体行为动态演化平台</div>
     <!-- 头部区域（可配合layui 已有的水平导航） -->
     <ul class="layui-nav layui-layout-left">
       <!-- 移动端显示 -->
@@ -60,35 +60,92 @@
       <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
       <ul class="layui-nav layui-nav-tree" lay-filter="test">
         <li class="layui-nav-item">
-          <a href="javascript:;" style="font-size: 18px;">微博可视化模块</a>
+          <a href="javascript:;" style="font-size: 18px;">微博舆情可视化</a>
           <dl class="layui-nav-child">
-            <dd><a onclick="skipto('introduceWeiboVisualizationModule')">模型介绍</a></dd>
-            <dd><a onclick="skipto('DemonstrationOfWeiboVisualizationModule')">模型展示</a></dd>
-            <dd><a href="javascript:;">子模块视需要添加</a></dd>
+            <a href="javascript:;" style="font-size: 16px;">微博转发结构分析</a>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('AnalysisOfWeiboForwardingStructure')" style="cursor:pointer; font-size: 14px">转发结构分析</a></dd>
+            </dl>
+          </dl>
+          <dl class="layui-nav-child">
+            <a href="javascript:;" style="font-size: 16px;">微博情感分析</a>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('EmotionalAnalysisOfSingleWeibo')" style="cursor:pointer; font-size: 14px">单条情感分析</a></dd>
+            </dl>
+            <dl class="layui-nav-child">
+              <a href="javascript:;" style="font-size: 14px;">数据情感分析</a>
+              <dl class="layui-nav-child">
+                <dd><a onclick="skipto('OverallAnalysisOfWeiboSentiment')" style="cursor:pointer; font-size: 12px">整体分析</a></dd>
+                <dd><a onclick="skipto('DetailedAnalysisOfWeiboSentiment')" style="cursor:pointer; font-size: 12px">详细分析</a></dd>
+              </dl>
+            </dl>
           </dl>
         </li>
         <li class="layui-nav-item">
-          <a class="" href="javascript:;" style="font-size: 18px;">群体行为预测</a>
+          <a href="javascript:;" style="font-size: 18px;">谣言舆情可视化</a>
           <dl class="layui-nav-child">
-            <dd><a onclick="skipto('introduceGroupBehaviorPredictionModel')">模型介绍</a></dd>
-            <dd><a onclick="skipto('DemonstrationOfGroupBehaviorPredictionModel')">模型展示</a></dd>
-            <dd><a href="javascript:;">子模块视需要添加</a></dd>
+            <a href="javascript:;" style="font-size: 16px;">谣言传播模型</a>
+            <dl class="layui-nav-child">
+              <a href="javascript:;" style="font-size: 14px;">SI传播模型</a>
+              <dl class="layui-nav-child">
+                <dd><a onclick="skipto('introduceSIModel')" style="cursor:pointer; font-size: 12px">模型介绍</a></dd>
+                <dd><a onclick="skipto('DemonstrationOfSIModel')" style="cursor:pointer; font-size: 12px">模型展示</a></dd>
+              </dl>
+              <dl class="layui-nav-child">
+                <a href="javascript:;" style="font-size: 12px;">SIR传播模型</a>
+                <dl class="layui-nav-child">
+                    <dd><a onclick="skipto('introduceSIRModel')" style="cursor:pointer; font-size: 10px">模型介绍</a></dd>
+                    <dd><a onclick="skipto('DemonstrationOfSIRModel')" style="cursor:pointer; font-size: 10px">模型展示</a></dd>
+                </dl>
+              </dl>
+            </dl>
+          </dl>
+          <dl class="layui-nav-child">
+            <a href="javascript:;" style="font-size: 16px;">谣言溯源模型</a>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('introduceRumorTraceabilityModel')" style="cursor:pointer; font-size: 14px">模型介绍</a></dd>
+              <dd><a onclick="skipto('DemonstrationOfRumorTraceabilityModel')" style="cursor:pointer; font-size: 14px">模型展示</a></dd>
+              <dd><a onclick="skipto('ComparisonOfRumorTraceabilityModel')" style="cursor:pointer; font-size: 14px">模型对比</a></dd>
+            </dl>
           </dl>
         </li>
         <li class="layui-nav-item">
-          <a href="javascript:;" style="font-size: 18px;">群体行为传播</a>
+          <a class="" href="javascript:;" style="font-size: 18px;">群体行为可视化</a>
           <dl class="layui-nav-child">
-            <dd><a onclick="skipto('introduceGroupBehaviorCommunicationModel')">模型介绍</a></dd>
-            <dd><a onclick="skipto('DemonstrationOfGroupBehaviorCommunicationModel')">模型展示</a></dd>
-            <dd><a href="javascript:;">子模块视需要添加</a></dd>
+            <a class="" href="javascript:;" style="font-size: 16px;">群体行为预测</a>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('introduceGroupBehaviorPredictionModel')" style="cursor:pointer; font-size: 14px">模型介绍</a></dd>
+            </dl>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('DemonstrationOfGroupBehaviorPredictionModel')" style="cursor:pointer; font-size: 14px">模型展示</a></dd>
+            </dl>
+            <dl class="layui-nav-child">
+              <dd><a href="javascript:;">子模块视需要添加</a></dd>
+            </dl>
           </dl>
-        </li>
-        <li class="layui-nav-item">
-          <a href="javascript:;" style="font-size: 18px;">群体情感分析</a>
           <dl class="layui-nav-child">
-            <dd><a onclick="skipto('introduceGroupSentimentAnalysisModel')">模型介绍</a></dd>
-            <dd><a onclick="skipto('DemonstrationOfGroupSentimentAnalysisModel')">模型展示</a></dd>
-            <dd><a href="javascript:;">子模块视需要添加</a></dd>
+            <a class="" href="javascript:;" style="font-size: 16px;">群体行为传播</a>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('introduceGroupBehaviorCommunicationModel')" style="cursor:pointer; font-size: 14px">模型介绍</a></dd>
+            </dl>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('DemonstrationOfGroupBehaviorCommunicationModel')" style="cursor:pointer; font-size: 14px">模型展示</a></dd>
+            </dl>
+            <dl class="layui-nav-child">
+              <dd><a href="javascript:;">子模块视需要添加</a></dd>
+            </dl>
+          </dl>
+          <dl class="layui-nav-child">
+            <a class="" href="javascript:;" style="font-size: 16px;">群体情感分析</a>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('introduceGroupSentimentAnalysisModel')" style="cursor:pointer; font-size: 14px">模型介绍</a></dd>
+            </dl>
+            <dl class="layui-nav-child">
+              <dd><a onclick="skipto('DemonstrationOfGroupSentimentAnalysisModel')" style="cursor:pointer; font-size: 14px">模型展示</a></dd>
+            </dl>
+            <dl class="layui-nav-child">
+              <dd><a href="javascript:;">子模块视需要添加</a></dd>
+            </dl>
           </dl>
         </li>
       </ul>
@@ -97,13 +154,13 @@
 
   <div class="layui-body" style=" overflow: hidden;">
     <!-- 内容主体区域 -->
-    <div id="init_title" style="position:absolute;left:10%;top:45%;font-size: 70px;">社交网络群体分析可视化平台</div>
+    <div id="init_title" style="position:absolute;left:10%;top:45%;font-size: 70px;">群体行为动态演化平台</div>
     <iframe id="iframe_id" src="" style=" width: 100%; height:100%;"></iframe>
   </div>
 
   <div class="layui-footer" style="text-align: center">
     <!-- 底部固定区域 -->
-    © 2021 - 2021 社交网络群体分析平台
+    © 2021 - 2021 群体行为动态演化平台
   </div>
 </div>
 {#所用到的js库#}
