群体行为预测页面微调
群体行为预测页面微调

--- a/templates/DemonstrationOfGroupBehaviorPredictionModel.html
+++ b/templates/DemonstrationOfGroupBehaviorPredictionModel.html
@@ -619,7 +619,7 @@ layui.use(['form', 'element', 'layer', 'util', 'table'], function(){
             //弹出层展示最终群体行为命中率
             var myImg = "";
             var popupTitle = '预测命中率';
-            var popupContent = "所展示选群体的行为预测命中率为："+hitRate.toString();
+            var popupContent = "所展示群体的行为预测命中率为："+hitRate.toString();
             var area_size = ['180px', '120px'];
             popupBox(index_popupBox, popupTitle, myImg, popupContent, area_size);
             addPageLog("所展示群体的行为预测命中率为："+hitRate.toString());
