--- a/templates/introduceGroupBehaviorCommunicationModel.html
+++ b/templates/introduceGroupBehaviorCommunicationModel.html
@@ -24,8 +24,14 @@
             <div class="layui-card" style="background-color: #f8f8f8">
                 <div class="layui-carousel" id="lunbotu" style="margin:0 auto; " lay-anim="" lay-indicator="inside" lay-arrow="hover">
                     <div carousel-item align="center">
-                        <div class="layui-this"><img src="../static/image/SI.png"  style="width: 80%;height:100%"></div>
-                        <div class=""><img src="../static/image/SI_process.png" style="width: 80%;height:100%"></div>
+                        <div class="layui-this"><img src="../static/image/communication1.png"  style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/communication2.png" style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/communication3.png" style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/communication4.png" style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/communication5.png" style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/communication6.png" style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/communication7.png" style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/communication8.png" style="width: 80%;height:100%"></div>
                     </div>
                 </div>
             </div>
