完成群体情感计算模块

--- a/templates/index.html
+++ b/templates/index.html
@@ -141,10 +141,13 @@
               <dd><a onclick="skipto('introduceGroupSentimentAnalysisModel')" style="cursor:pointer; font-size: 14px">模型介绍</a></dd>
             </dl>
             <dl class="layui-nav-child">
-              <dd><a onclick="skipto('DemonstrationOfGroupSentimentAnalysisModel')" style="cursor:pointer; font-size: 14px">模型展示</a></dd>
+                <dd><a onclick="skipto('DemonstrationOfGroupStructure')" style="cursor:pointer; font-size: 14px">群体结构展示</a></dd>
+            </dl>
+              <dl class="layui-nav-child">
+                <dd><a onclick="skipto('GroupEmotionAll')" style="cursor:pointer; font-size: 14px">群体情感计算</a></dd>
             </dl>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;">子模块视需要添加</a></dd>
+                <dd><a onclick="skipto('GroupEmotionCalculate')" style="cursor:pointer; font-size: 14px">种子节点选取</a></dd>
             </dl>
           </dl>
         </li>
