追加群体情感计算模型介绍页面，更正词云路径

--- a/templates/introduceGroupBehaviorCommunicationModel.html
+++ b/templates/introduceGroupBehaviorCommunicationModel.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SI模型介绍</title>
+  <title>UGT模型介绍</title>
   <link rel="stylesheet" href="/static/layui/css/layui.css" media="all">
 </head>
 <body>
