--- a/templates/introduceGroupSentimentAnalysisModel.html
+++ b/templates/introduceGroupSentimentAnalysisModel.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SI模型介绍</title>
+  <title>群体情感分析</title>
   <link rel="stylesheet" href="/static/layui/css/layui.css" media="all">
 </head>
 <body>
@@ -13,10 +13,10 @@
                 <div class="layui-collapse" lay-accordion style="background-color: #f8f8f8">
                     <div class="layui-colla-item" style="color: #000000;">
                         <div class="layui-colla-title" style="background-color: #f8f8f8;font-size:25px; font-weight: bold; color: #000000;">
-                            SI模型介绍
+                            模型介绍
                         </div>
                         <div class="layui-colla-content layui-show" style="background-color:#f8f8f8; overflow:auto; width:97%; height:180px; font-size:18px; color: #000000; line-height:25pt; text-align: justify; text-indent: 2em;">
-                            传染病模型研究传染病的传播速度、空间范围、传播途径、动力学机理等问题。由于谣言传播和传染病传播之间的相似性，近年来传染病模型被广泛应用在舆论、谣言等信息传播领域中，以指导对谣言传播的有效地预防和控制。常见的传染病模型分为 SI、SIR模型等。SI 模型考虑了传染病爆发和传播的过程，将人群分为两类—— S 类和 I 类，其中S类为易感者 (Susceptible)，指未得病者，但缺乏免疫能力，与感染者接触后容易受到感染；I 类为感染者 (Infectious)，指染上传染病的人，可以传播给易感者，将其变为感染者。在谣言传播中，S类指的尚未接收到谣言信息的无知者人群，而I类指那些接受并传播谣言的传播者人群。该模型的主要参数为感染率，即传播者将谣言传播给它的邻居节点并使其感染的概率，感染率的取值范围为[0,1]。图1为SI模型在wiki百科网络上模拟传播的结果，其中总人数为104，初始时刻网络中只有一个感染节点，感染率设置为0.3。红色曲线展示了网络中感染节点的数量变化，黑色曲线展示了易感节点的数量变化。图2为SI模型传播动态截图，灰色节点代表易感节点，红色节点代表感染节点。
+                            基于群体情感的影响力最大化方法主要分为三个模块：群体划分、基于群体情感的潜在用户集合发现、基于用户多维特征的信息传播。（1）群体划分过程主要采用Louvain算法进行划分，得到多个用户群体；（2）基于群体情感的潜在用户集合发现：根据社会心理学的“群体动力理论”，定义用户情感力和群聚信度概念，设计群体情感聚合机制。根据群体稳定性和用户非实时活跃性特点，一段时间内群体情绪发生剧烈变化表明该时间内影响力用户可能进行了信息传播过程。根据这一思想找出种子候选节点，提升算法效率；（3）基于用户多维特征的信息传播：该过程提出双因子信息传播模型，考虑用户内容情绪和网络结构信息，使得信息传播更加符合真实社交网络的复杂性。通过该传播模型发现候选节点中的种子传播节点。
                         </div>
                     </div>
                 </div>
@@ -24,8 +24,10 @@
             <div class="layui-card" style="background-color: #f8f8f8">
                 <div class="layui-carousel" id="lunbotu" style="margin:0 auto; " lay-anim="" lay-indicator="inside" lay-arrow="hover">
                     <div carousel-item align="center">
-                        <div class="layui-this"><img src="../static/image/SI.png"  style="width: 80%;height:100%"></div>
-                        <div class=""><img src="../static/image/SI_process.png" style="width: 80%;height:100%"></div>
+                        <div class="layui-this"><img src="../static/image/GroupEmotion1.png"  style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/GroupEmotion2.png" style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/GroupEmotion3.png" style="width: 80%;height:100%"></div>
+                        <div class=""><img src="../static/image/GroupEmotion4.png" style="width: 80%;height:100%"></div>
                     </div>
                 </div>
             </div>
