--- a/templates/ComparisonOfRumorTraceabilityModel.html
+++ b/templates/ComparisonOfRumorTraceabilityModel.html
@@ -105,8 +105,15 @@
     <script src="../static/layui/layui.js"></script>
     <script type="text/javascript" src="/static/js/echarts.js"></script>
     <script type="text/javascript" src="/static/js/sourceDetection.js"></script>
+    <script src="../static/js/jquery.js"></script>
+    <script src="../static/js/jquery.cookie.js"></script>
     <script type="text/javascript">
-layui.use('form', function () {
+        (()=>{
+            if($.cookie('user') == undefined)
+                $(window).attr('location','/login');
+        })()
+        
+        layui.use('form', function () {
         var form = layui.form;
         var layer = layui.layer;
 
