--- a/templates/DemonstrationOfRumorTraceabilityModel.html
+++ b/templates/DemonstrationOfRumorTraceabilityModel.html
@@ -90,7 +90,14 @@
 
 <script type="text/javascript" src="/static/js/echarts.js"></script>
 <script type="text/javascript" src="/static/js/sourceDetection.js"></script>
+<script src="../static/js/jquery.js"></script>
+<script src="../static/js/jquery.cookie.js"></script>
 <script type="text/javascript">
+    (()=>{
+        if($.cookie('user') == undefined)
+            $(window).attr('location','/login');
+    })()
+    
     layui.use('form', function(){
             var form = layui.form;
             form.render();
