--- a/templates/DemonstrationOfGroupBehaviorCommunicationModel.html
+++ b/templates/DemonstrationOfGroupBehaviorCommunicationModel.html
@@ -76,8 +76,15 @@
 <script src="../static/js/jquery.js"></script>
 <script type="text/javascript" src="../static/js/echarts.js"></script>
 <script type="text/javascript" src="../static/js/echarts.min.js"></script>
+<script src="../static/js/jquery.js"></script>
+<script src="../static/js/jquery.cookie.js"></script>
 {#自己撰写的本页面的js代码#}
 <script type="text/javascript">
+    (()=>{
+        if($.cookie('user') == undefined)
+            $(window).attr('location','/login');
+    })()
+
     layui.use(['form'], function () {
         var form = layui.form;
         form.render();
