--- a/templates/DemonstrationOfSIModel.html
+++ b/templates/DemonstrationOfSIModel.html
@@ -39,8 +39,14 @@
 
 <script type="text/javascript" src="/static/js/echarts.js"></script>
 <script type="text/javascript" src="/static/js/sifunction.js"></script>
+<script src="../static/js/jquery.js"></script>
+<script src="../static/js/jquery.cookie.js"></script>
 <script type="text/javascript">
-
+    (()=>{
+        if($.cookie('user') == undefined)
+            $(window).attr('location','/login');
+    })()
+    
     var dom = document.getElementById("container");
     var myChart = echarts.init(dom);
     // 首次显示加载动画
