--- a/templates/EmotionalAnalysisOfSingleWeibo.html
+++ b/templates/EmotionalAnalysisOfSingleWeibo.html
@@ -9,11 +9,13 @@
 </head>
 <body style="height: 100%;margin: 0">
 <div id="control">
-    <form class="layui-form" method="POST"><br><br>
+    <form name="theForm1" id="the_form1" class="layui-form" action="##" onsubmit="return false"
+          method="post" enctype='multipart/form-data'><br><br>
+<!--    <form class="layui-form" method="POST">-->
       <div class="layui-form-item" ><label class="layui-form-label" style="font-size: 15px">文本示例</label>
         <div class="layui-input-block">
-            <input type="text" name="content_value" placeholder="请输入中文文本" autocomplete="off" class="layui-input" style="Float:left;width: 80%;font-size: 15px" >
-              <button class="layui-btn" lay-submit lay-filter="*" style="Float:left;position:absolute">提交</button>
+            <input type="text" id="id_content_value" name="content_value" placeholder="请输入中文文本" autocomplete="off" class="layui-input" style="Float:left;width: 80%;font-size: 15px" >
+              <button class="layui-btn" id="mybtu"  lay-submit="*" lay-filter="submit_btu" style="Float:left;position:absolute">提交</button>
         </div>
       </div>
     </form>
@@ -23,107 +25,134 @@
     <div id="chart1" style="width: 200%; height: 100%;float:left;"></div>
 </div>
 <script src="../static/layui/layui.js"></script>
+<script src="../static/js/jquery.js"></script>
 <script type="text/javascript" src="/static/js/echarts.js"></script>
 <script type="text/javascript" src="/static/js/function.js"></script>
+<script src="../static/js/jquery.cookie.js"></script>
 <script type="text/javascript">
-
-    var senti_value={{senti_value}};
-    var content_err={{content_err}};
-    var dom = document.getElementById("chart1");   //获取要加入内容的容器
-    var myChart = echarts.init(dom);
-    var option;
-    function toDecimal(x) {
-        var f = parseFloat(x);
-        if (isNaN(f)) {
-            return;
-        }
-        f = Math.round(x*100)/100;
-        return f;
-    }
-    layui.use('layer',function(){
-        var layer=layui.layer;
-        if(content_err===1) {
-            // senti_other=toDecimal(1-senti_value)
-            // diff=senti_value-senti_other
-            // if(Math.abs(diff)<=0.1)
-            if(senti_value<0.57 && senti_value>=0.5)
-            {
-                layer.msg('该文本情感倾向偏向中性')
-            }
-            if(senti_value>=0.57)
-                 {
-                    layer.msg('该文本情感倾向偏向积极倾向')
-                 }
-            if(senti_value<0.5){
-                     layer.msg('该文本情感倾向偏向消极倾向')
-                 }
-            option = {
-                title: {
-                    text: '当前文本情感分布',
-                    left: '58%',
-                },
-                tooltip: {
-                    trigger: 'item',
-                    formatter: '{a} <br/>{b} : {c} ({d}%)'
-                },
-                legend: {
-                    orient: 'vertical',
-                    left: 'left',
-                    data: ['积极极性', '消极极性']
-                },
-                series: [
-                    {
-                        name: '情感极性',
-                        type: 'pie',
-                        radius: ['40%', '60%'],
-                        center:['70%','40%'],
-                        avoidLabelOverlap: false,
-                        label: {
-                            show: false,
-                            position: 'center'
-                        },
-                        emphasis: {
-                            label: {
-                                show: true,
-                                fontSize: '30',
-                                fontWeight: 'bold'
-                            }
-                        },
-                        labelLine: {
-                            show: false
-                        },
-                        data: [
-                            {value: senti_value, name: '积极情绪'},
-                            {value: toDecimal(1-senti_value), name: '消极情绪'}
-                        ]
+layui.use(['layer'], function(){
+  var layer = layui.layer
+    ,$ = layui.$;
+    //代码
+    (()=>{
+        if($.cookie('user') == undefined)
+            $(window).attr('location','/login');
+    })()
+    //监听按钮点击
+    $('#mybtu').on('click', function () {
+        var content_document = document.getElementById('id_content_value');
+        var content_value = content_document.value;
+        var submitData = {"content_value": content_value}
+        $.ajax({
+            url: "EmotionalAnalysisOfSingleWeiboPostData",
+            type: "POST",
+            dataType: "json",
+            data: submitData,
+            success: function (newData) {
+                //在这里运行代码抛出错误
+                var senti_value=newData.senti_value;
+                var content_err=newData.content_err;
+    <!--            var senti_value={{senti_value}};-->
+    <!--            var content_err={{content_err}};-->
+                var dom = document.getElementById("chart1");   //获取要加入内容的容器
+                var myChart = echarts.init(dom);
+                var option;
+                function toDecimal(x) {
+                    var f = parseFloat(x);
+                    if (isNaN(f)) {
+                        return;
                     }
-                ]
-                // series: [
-                // {
-                //     name: '情感极性',
-                //     type: 'pie',
-                //     radius: '40%',
-                //     center: ['50%', '40%'],
-                //     data: [
-                //         {value: senti_value, name: '积极情绪'},
-                //         {value: toDecimal(1-senti_value), name: '消极情绪'},
-                //     ],
-                //     emphasis: {
-                //         itemStyle: {
-                //             shadowBlur: 10,
-                //             shadowOffsetX: 0,
-                //             shadowColor: 'rgba(0, 0，0,0.5)'
-                //         }
-                //     }
-                // }
-                // ]
-            };
-            myChart.setOption(option)
-        }
-        else{
-            layer.msg('输入格式有误，请重新输入');
-        }
-	});
+                    f = Math.round(x*100)/100;
+                    return f;
+                }
+                if(content_err===1) {
+                    // senti_other=toDecimal(1-senti_value)
+                    // diff=senti_value-senti_other
+                    // if(Math.abs(diff)<=0.1)
+                    if(senti_value<0.57 && senti_value>=0.5)
+                    {
+                        layer.msg('该文本情感倾向偏向中性')
+                    }
+                    if(senti_value>=0.57)
+                         {
+                            layer.msg('该文本情感倾向偏向积极倾向')
+                         }
+                    if(senti_value<0.5){
+                             layer.msg('该文本情感倾向偏向消极倾向')
+                         }
+                    option = {
+                        title: {
+                            text: '当前文本情感分布',
+                            left: '58%',
+                        },
+                        tooltip: {
+                            trigger: 'item',
+                            formatter: '{a} <br/>{b} : {c} ({d}%)'
+                        },
+                        legend: {
+                            orient: 'vertical',
+                            left: 'left',
+                            data: ['积极极性', '消极极性']
+                        },
+                        series: [
+                            {
+                                name: '情感极性',
+                                type: 'pie',
+                                radius: ['40%', '60%'],
+                                center:['70%','40%'],
+                                avoidLabelOverlap: false,
+                                label: {
+                                    show: false,
+                                    position: 'center'
+                                },
+                                emphasis: {
+                                    label: {
+                                        show: true,
+                                        fontSize: '30',
+                                        fontWeight: 'bold'
+                                    }
+                                },
+                                labelLine: {
+                                    show: false
+                                },
+                                data: [
+                                    {value: senti_value, name: '积极情绪'},
+                                    {value: toDecimal(1-senti_value), name: '消极情绪'}
+                                ]
+                            }
+                        ]
+                        // series: [
+                        // {
+                        //     name: '情感极性',
+                        //     type: 'pie',
+                        //     radius: '40%',
+                        //     center: ['50%', '40%'],
+                        //     data: [
+                        //         {value: senti_value, name: '积极情绪'},
+                        //         {value: toDecimal(1-senti_value), name: '消极情绪'},
+                        //     ],
+                        //     emphasis: {
+                        //         itemStyle: {
+                        //             shadowBlur: 10,
+                        //             shadowOffsetX: 0,
+                        //             shadowColor: 'rgba(0, 0，0,0.5)'
+                        //         }
+                        //     }
+                        // }
+                        // ]
+                    };
+                    myChart.setOption(option)
+                }
+                else{
+                    layer.msg('输入格式有误，请重新输入');
+                }
+            },
+            error: function () {
+                layer.msg('处理出错！', {icon: 7, time: 2000, shade: [0.6, '#000', true]});
+            }
+        });
+    });
+});
 </script>
 </body>
 </html>
