--- a/templates/GroupEmotionCalculate.html
+++ b/templates/GroupEmotionCalculate.html
@@ -17,7 +17,13 @@
 <script type="text/javascript" src="/static/js/function.js"></script>
 <script type="text/javascript" src="../static/js/echarts.js"></script>
 <script type="text/javascript" src="../static/js/echarts.min.js"></script>
+<script src="../static/js/jquery.cookie.js"></script>
 <script type="text/javascript">
+    (()=>{
+        if($.cookie('user') == undefined)
+            $(window).attr('location','/login');
+    })()
+
     layui.use(['element', 'layer', 'util'], function () {
         var element = layui.element
             , layer = layui.layer
