--- a/templates/forget.html
+++ b/templates/forget.html
@@ -117,7 +117,7 @@
 <!-- 尾部开始 -->
 <div class="layui-row" style="top: 100px;bottom: 20px">
     <div class="layui-col-sm12 layui-col-md12 zyl_center zyl_mar_01">
-        <b style="font-size: 15px"> 2021 - 动态社区演化及影响力传播可视化平台</b>
+        <b style="font-size: 15px"> 2021 - 群体行为动态演化平台</b>
     </div>
 </div>
 <!-- 尾部结束 -->
