--- a/templates/introduceSIModel.html
+++ b/templates/introduceSIModel.html
@@ -33,7 +33,25 @@
     </div>
 </div>
 <script src="/static/layui/layui.js"></script>
+<script src="../static/js/jquery.js"></script>
+<script src="../static/js/jquery.cookie.js"></script>
 <script>
+layui.use(['form', 'element', 'layer', 'util', 'table'], function(){
+  var element = layui.element
+    ,form = layui.form
+    ,layer = layui.layer
+    ,util = layui.util
+    ,table = layui.table
+    ,$ = layui.$;
+    (()=>{
+        if($.cookie('user') == undefined)
+        $(window).attr('location','/login');
+    })()
+});
+</script>
+
+<script>
+
 layui.use('carousel', function(){
   var carousel = layui.carousel;
   //建造实例
