--- a/templates/GroupEmotionAll.html
+++ b/templates/GroupEmotionAll.html
@@ -426,12 +426,12 @@ layui.use(['element', 'layer', 'util'], function(){
  		url: "groupemotion",//请求数据的地址
  		dataType: "json",        //返回数据形式为json
  		success: function (result) {
- 			console.info(result);
+ 			//console.info(result);
  			//请求成功时执行该函数内容，result即为服务器返回的json对象
  			$.each(result.data, function (index, item) {//循环取出json中的数据,
-                console.info(result.data);    //index是检索到的json中的对象下标,item为json中的对象
+                //console.info(result.data);    //index是检索到的json中的对象下标,item为json中的对象
  				var day_index = index;
- 				console.info(day_index,item);
+ 				//console.info(day_index,item);
             	                day_array[0] = "";    //挨个取出类别并填入类别数组
                                 day_array[day_index] = day_index;    //挨个取出类别并填入类别数组
                                 group0_array[day_index] = item.group1;
@@ -442,7 +442,7 @@ layui.use(['element', 'layer', 'util'], function(){
                                 group5_array[day_index] = item.group6;
                                 group6_array[day_index] = item.group7;
                                 group7_array[day_index] = item.group8;
-            	                console.info(group1_array[day_index]);
+            	                //console.info(group1_array[day_index]);
  			});
  			envirChart.setOption(envirOption);//重新新加载数据
  		},
