--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@
 
   <div class="layui-body" style=" overflow: hidden;">
     <!-- 内容主体区域 -->
-    <div id="init_title" style="position:absolute;left:10%;top:45%;font-size: 70px;">群体行为动态演化平台</div>
+    <div id="init_title" style="position:absolute;left:23%;top:45%;font-size: 70px;text-align:center;">群体行为动态演化平台</div>
     <iframe id="iframe_id" src="" style=" width: 100%; height:100%;"></iframe>
   </div>
 
